# wakey

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  PROJECT.md  RUNTIME.md  TASKS.md  clippy.toml  deny.toml
config/: default.toml
config/expressions/: coffee_break.json  deep_work.json  error.json  party.json
cortex/src/voice/: speaker.rs
crates/wakey-action/: Cargo.toml
crates/wakey-action/src/: browser.rs  files.rs  grounding.rs  input.rs  lib.rs  safety.rs  terminal.rs
crates/wakey-app/: Cargo.toml
crates/wakey-app/src/: main.rs
crates/wakey-context/: Cargo.toml
crates/wakey-context/src/: filesystem.rs  lib.rs  memory.rs  retrieval.rs  tiers.rs
crates/wakey-cortex/: AGENTS.md  Cargo.toml
crates/wakey-cortex/src/: agent_loop.rs  decision.rs  heartbeat.rs  lib.rs  llm.rs  plugin_host.rs  prompt_loader.rs  tts.rs  voice.rs
crates/wakey-cortex/src/voice/: mic.rs  mod.rs  pipeline.rs  speaker.rs  stt.rs  tts.rs  vad.rs
crates/wakey-heartbeat/: AGENTS.md  Cargo.toml
crates/wakey-heartbeat/src/: breath.rs  dream.rs  lib.rs  reflect.rs  tick.rs
crates/wakey-learning/: Cargo.toml
crates/wakey-learning/src/: extractor.rs  lib.rs  refiner.rs  trajectory.rs
crates/wakey-memory/: Cargo.toml
crates/wakey-memory/src/: backend.rs  episodic.rs  lib.rs  semantic.rs  working.rs
crates/wakey-overlay/: AGENTS.md  Cargo.toml
crates/wakey-overlay/src/: animation_state.rs  bubble.rs  expressions.rs  lib.rs  sprite.rs  trigger.rs  window.rs
crates/wakey-persona/: Cargo.toml
crates/wakey-persona/src/: evolution.rs  lib.rs  mood.rs  style.rs
crates/wakey-safety/: Cargo.toml
crates/wakey-safety/src/: engine.rs  lib.rs  policy.rs
crates/wakey-sdk/: Cargo.toml
crates/wakey-sdk/src/: lib.rs
crates/wakey-senses/: Cargo.toml
crates/wakey-senses/src/: a11y.rs  clipboard.rs  filesystem.rs  lib.rs  ocr.rs  system.rs  vlm.rs  window.rs
crates/wakey-skills/: Cargo.toml
crates/wakey-skills/src/: dag.rs  evolution.rs  format.rs  learning.rs  lib.rs  quality.rs  registry.rs  traits.rs  wasm.rs
crates/wakey-skills/src/agent_supervisor/: detector.rs  fixer.rs  mod.rs  reporter.rs  watcher.rs
crates/wakey-spine/: AGENTS.md  Cargo.toml
crates/wakey-spine/src/: lib.rs
crates/wakey-tui/: Cargo.toml
crates/wakey-tui/src/: chat.rs  lib.rs  onboarding.rs  theme.rs
crates/wakey-types/: AGENTS.md  Cargo.toml
crates/wakey-types/src/: config.rs  error.rs  event.rs  lib.rs  message.rs
crates/wakey-user-model/: Cargo.toml
crates/wakey-user-model/src/: lib.rs  patterns.rs  preferences.rs  profile.rs
crates/wakey-voice/: Cargo.toml
crates/wakey-voice/src/: lib.rs  stt.rs  triggers.rs  tts.rs
docs/: ANIMATION_IMPLEMENTATION.md  CODING_STANDARDS.md  EXPRESSION_DECISION_SYSTEM.md  EXPRESSION_SYSTEM.md  VERIFICATION_REPORT.md  VIBE.md
docs/architecture/: DECISIONS.md  overview.md
docs/features/: brainstorm.md
docs/research/: hermes-deep.md  hermes-impl.md  landscape.md  memory-systems-comparison.md  meta-harness-integration.md  openclaw-deep.md  openfang-deep.md  openfang-impl.md  openspace-deep.md  openviking-deep.md  zeroclaw-deep.md  zeroclaw-impl.md
plugins/voice-livekit/: .env.example  Makefile  README.md  main.py  requirements.txt  setup.sh  test_protocol.py
policies/: default.cedar
skills/builtin/agent-supervisor/: SKILL.md
skills/wakey-vision-guard/: SKILL.md
skills/wakey-vision-guard-workspace/evals/: evals.json
skills/wakey-vision-guard-workspace/iteration-1/eval-1-brainstorm/with_skill/: timing.json
skills/wakey-vision-guard-workspace/iteration-1/eval-1-brainstorm/with_skill/outputs/: response.md
skills/wakey-vision-guard-workspace/iteration-1/eval-1-brainstorm/without_skill/: timing.json
skills/wakey-vision-guard-workspace/iteration-1/eval-1-brainstorm/without_skill/outputs/: response.md
skills/wakey-vision-guard-workspace/iteration-1/eval-2-toolcreep/with_skill/: timing.json
skills/wakey-vision-guard-workspace/iteration-1/eval-2-toolcreep/with_skill/outputs/: response.md
skills/wakey-vision-guard-workspace/iteration-1/eval-2-toolcreep/without_skill/: timing.json
skills/wakey-vision-guard-workspace/iteration-1/eval-2-toolcreep/without_skill/outputs/: response.md
skills/wakey-vision-guard-workspace/iteration-1/eval-3-overengineering/with_skill/: timing.json
skills/wakey-vision-guard-workspace/iteration-1/eval-3-overengineering/with_skill/outputs/: response.md
skills/wakey-vision-guard-workspace/iteration-1/eval-3-overengineering/without_skill/: timing.json
skills/wakey-vision-guard-workspace/iteration-1/eval-3-overengineering/without_skill/outputs/: response.md
specs/: p1-s1-config.md  p1-s2-heartbeat.md  p1-s3-llm.md  p1-s4-overlay.md  p1-s5-wire.md  p1-s6-voice-deepgram.md  p1-s6-voice.md  p2-agent-supervisor.md  p2-s1-context-system.md  p2-s2-skill-runtime.md  p2-s3-wire-context-skills.md  p3-make-it-work.md  p3-voice-fixes.md  p3-voice-only.md  p4-livekit-voice.md  p4-voice-plugin-arch.md  p5-prompt-management.md  p5-sprite-alive.md  research-compare-memory-systems.md  research-hermes-deep.md  research-hermes.md  research-meta-harness.md  research-openclaw-deep.md  research-openfang-deep.md  research-openfang.md  research-openspace-deep.md  research-openviking-deep.md  research-zeroclaw-deep.md  research-zeroclaw.md  wakey-full-brief.md
voice-agent/: requirements.txt
