[workspace]
resolver = "2"
members = [
    "crates/wakey-types",       # Foundation: events, errors, config
    "crates/wakey-spine",       # Event bus: tokio broadcast
    "crates/wakey-context",     # Memory + skills storage: OpenViking pattern (L0/L1/L2)
    "crates/wakey-senses",      # Perception: a11y, screen, clipboard, system, git
    "crates/wakey-cortex",      # Brain: agent loop (ZeroClaw) + LLM + heartbeat + decisions
    "crates/wakey-action",      # Hands: input, terminal, browser + Cedar safety
    "crates/wakey-skills",      # Skills: Hermes format + petgraph DAG + WASM sandbox + learning loop
    "crates/wakey-overlay",     # Face: egui, sprites, chat bubbles
    "crates/wakey-app",         # Binary: ties everything together
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dip497/wakey"
description = "Your laptop, alive — an open-source AI companion"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP (for LLM client)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Database (memory backend)
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# Skill graph
petgraph = "0.7"

# Async traits
async-trait = "0.1"

# Internal crates
wakey-types = { path = "crates/wakey-types" }
wakey-spine = { path = "crates/wakey-spine" }
wakey-context = { path = "crates/wakey-context" }
wakey-senses = { path = "crates/wakey-senses" }
wakey-cortex = { path = "crates/wakey-cortex" }
wakey-action = { path = "crates/wakey-action" }
wakey-skills = { path = "crates/wakey-skills" }
wakey-overlay = { path = "crates/wakey-overlay" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
