[package]
name = "wakey-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wakey binary — ties all systems together"

[[bin]]
name = "wakey"
path = "src/main.rs"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
wakey-context = { workspace = true }
wakey-senses = { workspace = true }
wakey-cortex = { workspace = true }
wakey-action = { workspace = true }
wakey-skills = { workspace = true }
wakey-overlay = { workspace = true }
wakey-tui = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
