[package]
name = "wakey-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory + skills storage — OpenViking filesystem pattern with L0/L1/L2 tiers"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
lru = "0.12"

[dev-dependencies]
tempfile = "3"
