[package]
name = "wakey-cortex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decision engine — the brain that weighs signals and decides action"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
wakey-memory = { workspace = true }
wakey-safety = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
