[package]
name = "wakey-cortex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The brain — agent loop (ZeroClaw pattern), LLM client, heartbeat rhythms, decisions"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
wakey-context = { workspace = true }
wakey-senses = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
