[package]
name = "wakey-cortex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The brain — agent loop (ZeroClaw pattern), LLM client, heartbeat rhythms, decisions"

[features]
default = []
voice = ["cpal", "tokio-tungstenite", "base64", "futures-util"]

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
wakey-context = { workspace = true }
wakey-senses = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Voice mode dependencies (optional)
cpal = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
