[package]
name = "wakey-heartbeat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Consciousness cycles — tick, breath, reflect, dream"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
