[package]
name = "wakey-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The face — always-on-top egui window, sprites, chat bubbles, expressions"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
