[package]
name = "wakey-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The face — always-on-top egui window, sprites, chat bubbles, expressions"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "x11",          # X11 support for Linux
    "wayland",      # Wayland support (optional but good to have)
] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
