[package]
name = "wakey-safety"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cedar policy engine — deterministic, auditable action guardrails"

[dependencies]
wakey-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
