[package]
name = "wakey-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extensible skill system — trait-based + WASM sandboxed"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
wakey-safety = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
