[package]
name = "wakey-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skills runtime — Hermes format + petgraph DAG + WASM sandbox + learning loop"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
petgraph = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
regex = "1"
walkdir = "2"
notify = { version = "6.1", features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
