[package]
name = "wakey-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Wakey"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
wakey-context = { workspace = true }
wakey-cortex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
