[package]
name = "wakey-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, events, config, and errors for Wakey"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
