[package]
name = "wakey-user-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "User modeling — tracks patterns, preferences, and behavior over time"

[dependencies]
wakey-types = { workspace = true }
wakey-memory = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
