[package]
name = "wakey-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Speech — TTS and STT integration"

[dependencies]
wakey-types = { workspace = true }
wakey-spine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
